
[gd_scene load_steps=5 format=3]

[ext_resource path="res://scripts/fase1.gd" type="Script" id=1]

[node name="Fase1" type="Control"]
script = ExtResource( 1 )

[node name="BotaoEmpatia" type="Button" parent="."]
text = "Empatia"

[node name="BotaoControle" type="Button" parent="."]
text = "Controle"

[node name="BotaoAutonomia" type="Button" parent="."]
text = "Autonomia"

[node name="Narrativa" type="Label" parent="."]
text = "Escolha uma diretriz para a IA."
